# mnk

./: .gitignore  CMakeLists.txt  README.md
include/: Agent.h  Application.h  BoardQuery.h  Configuration.h  GameClient.h  ServerForFrontend.h  State.h  shared.h
include/state/: CellIterator.h  CellType.h  OptimizedBoard.h  State.h
src/: Agent.cpp  Application.cpp  BoardQuery.cpp  CMakeLists.txt  CellIterator.cpp  Configuration.cpp  GameClient.cpp  ServerForFrontend.cpp  State.cpp  main.cpp  shared.cpp
